# eathereum

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  PRODUCTION_SETUP.md  README.md  RUST_IMPROVEMENTS.md  TEST_REAL_DATA.md  game-client-example.js  render.yaml  setup-hooks.sh  websocket-service-example.js
.claude/agents/: rust-code-improver.md
.githooks/: pre-commit
.github/workflows/: block-monitor.yml  game-server.yml  redis-stream-consumer.yml
block-monitor/: .env.example  Cargo.toml  DEPLOY.md  Dockerfile  README.md  REFACTORING.md  docker-compose.yml  render.yaml
block-monitor/src/: blockchain.rs  config.rs  error.rs  health_server.rs  lib.rs  main.rs  main_refactored.rs  monitor.rs  redis_publisher.rs  websocket_server.rs
block-monitor/src/domain/: mod.rs  transaction.rs
block-monitor/src/server/: health.rs  mod.rs  websocket.rs
block-monitor/src/services/: blockchain.rs  mod.rs  publisher.rs
exex/: Cargo.toml
frontend/: MIGRATION.md  PATHFINDING.md  README.md  REFACTORING.md  SPAWN_QUEUE.md  _headers  debug-test.html  index.html  styles.css  test-connection.html  test-ws-direct.html  test.html  test_pathfinding.html  test_spawn_queue.html  visualizer.js  websocket.js
frontend/js/: config.js  entity-manager.js  game-loop.js  game-state.js  main.js  player.js  scene-manager.js  ui-manager.js  websocket-manager.js
frontend/src/: main.js
frontend/src/core/: Config.js  EventBus.js  GameEngine.js  GameState.js
frontend/src/entities/: Player.js
frontend/src/rendering/: AssetFactory.js  SceneManager.js
game-server/: .env.example  Cargo.toml  GAME_CONSUMER.md  LEADERBOARD_API.md  MIGRATION.md  README.md  SECURE_LEADERBOARD_API.md  TESTING.md  game-consumer.html  mock-redis-publisher.js  package.json  render.yaml  test-client.html  test_leaderboard.js  test_secure_leaderboard.js
game-server/src/: config.rs  error.rs  health.rs  main.rs  main_refactored.rs  redis_consumer.rs  transaction.rs  websocket.rs
game-server/src/health/: mod.rs
game-server/src/message/: mod.rs  processor.rs
game-server/src/redis/: consumer.rs  mod.rs  stream_message.rs
game-server/src/websocket/: client_manager.rs  handler.rs  mod.rs
redis-stream-consumer/: .gitignore  Cargo.toml  README.md
redis-stream-consumer/src/: main.rs
src/: main.rs  websocket.rs
stablecoin-server/: .env.example  Cargo.toml  DEPLOY.md  Dockerfile  README.md  docker-compose.yml  render.yaml
stablecoin-server/src/: main.rs
visualizer/: CODE_SEPARATION.md  index.html  styles.css  visualizer.js  websocket.js
