[package]
name = "stablecoin-visualizer"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
# reth
reth = { git = "https://github.com/paradigmxyz/reth", tag = "v1.6.0" }
reth-execution-types = { git = "https://github.com/paradigmxyz/reth", tag = "v1.6.0" }
reth-exex = { git = "https://github.com/paradigmxyz/reth", tag = "v1.6.0", features = ["serde"] }
reth-node-api = { git = "https://github.com/paradigmxyz/reth", tag = "v1.6.0" }
reth-node-ethereum = { git = "https://github.com/paradigmxyz/reth", tag = "v1.6.0" }
reth-tracing = { git = "https://github.com/paradigmxyz/reth", tag = "v1.6.0" }
reth-ethereum = { git = "https://github.com/paradigmxyz/reth", tag = "v1.6.0", features = ["full"] }
reth-ethereum-cli = { git = "https://github.com/paradigmxyz/reth", tag = "v1.6.0" }
reth-provider = { git = "https://github.com/paradigmxyz/reth", tag = "v1.6.0" }
reth-primitives = { git = "https://github.com/paradigmxyz/reth", tag = "v1.6.0" }
reth-primitives-traits = { git = "https://github.com/paradigmxyz/reth", tag = "v1.6.0" }

# alloy
alloy-primitives = "1.0"
alloy-sol-types = { version = "1.0", features = ["json"] }
alloy-rpc-types = { version = "1.0", features = ["eth"], default-features = false }

# async
eyre = "0.6"
futures = "0.3"
tokio = { version = "1.0", features = ["full"] }

# cli
clap = { version = "4", features = ["derive"] }

# logging
tracing = "0.1"

# serde for data serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"