[package]
name = "redis-stream-consumer"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.24"
redis = { version = "0.27", features = ["tokio-comp", "streams"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
eyre = "0.6"
tracing = "0.1"
tracing-subscriber = "0.3"
dotenv = "0.15"
futures-util = "0.3"
warp = "0.3"
uuid = { version = "1", features = ["v4"] }